[package]
name = "arxiv_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feed-rs = "1.1.0"
reqwest = "0.11.11"
tokio = { version = "1.19.2", features = ["full"] }

[patch.crates-io]
feed-rs = { version = "1.1.1", git = 'https://github.com/ntapiam/feed-rs', branch = 'arxiv'}
